Name:               poet
Version:            0.2.1
Cabal-Version:      >= 1.2
Author:             Marcelo Sousa
Synopsis:           POET: Partial Order Exploration Tools
Description:        POR and Unfolding-based Exploration of Concurrent Systems
Build-Type:         Simple

Executable poet
    Main-Is:          Main.hs
    Build-Depends:    base          
                    , containers    
                    , filepath   
                    , directory
                    , mtl           
                    , cmdargs
                    , transformers 
                    , text
                    , bytestring
                    , vector
                    , hashtables
--                    , haskroid == 1.1 
                    , language-c
                    , simplec
                    , HUnit
                    , random
                    , hashable 
                    , process 
                    , ansi-terminal 
    Hs-Source-Dirs:   src/
    ghc-options:      -O3 -rtsopts
    Extensions:       DoAndIfThenElse

